--- a/index.html
+++ b/index.html
@@ -6,20 +6,23 @@
 </head>
 <body>
     <header>
+        <!--Ссылки на страницы-->
         <a href="#">Главная</a>
         <a href="pages/about.html">О нас</a>
         <a href="pages/contacts.html">Контакты</a>
     </header>
     <main>
+        <!--Содержимое страницы-->
         <h1>Моя первая веб-страница</h1>
         <h2>Про меня</h2>
         <p>Меня зовут Сергей. Я работаю <strong>веб-мастером</strong>. Изучаю php для себя и работы, а так же решил повысить качество работы, закрыть пробелы в знаниях по html/css и вытянуть js.</p>
         <p>Я из Тулы, люблю Web и IT, спорт, ночь.</p>
         <h2>Чему я хочу научиться</h2>
         <p>Прохожу курс, что бы уметь работать с <b>PHP, JS</b>, а также <i>без подсказок</i> применять <b>JS</b></p>
-        <img src="/site/images/Bill_Gates_1977.png" alt="Ну серьезно, это я!">
+        <img src="/site/images/Bill_Gates_1977.png" alt="Ну серьезно, это я!"><!--К фото не прилагалось никаких лицензий, просто с вики-->
     </main>
     <footer>
+        <!--Тут копирайт отличного курса SF-->
         <span>&copy;&nbsp;Skillfactory</span>
     </footer>
 </body>
