--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
     <title>Моя первая веб-страница</title>
 </head>
 <body>
+    <!-- А тут начинается самое интересное-->
     <header>
         <!--Ссылки на страницы-->
-        <a href="#">Главная</a>
+        <a href="#"><b>Главная</b></a>
         <a href="pages/about.html">О нас</a>
         <a href="pages/contacts.html">Контакты</a>
     </header>
@@ -19,7 +21,8 @@
         <p>Я из Тулы, люблю Web и IT, спорт, ночь.</p>
         <h2>Чему я хочу научиться</h2>
         <p>Прохожу курс, что бы уметь работать с <b>PHP, JS</b>, а также <i>без подсказок</i> применять <b>JS</b></p>
-        <img src="/site/images/Bill_Gates_1977.png" alt="Ну серьезно, это я!"><!--К фото не прилагалось никаких лицензий, просто с вики-->
+        <img src="images/Bill_Gates_1977.png" alt="Ну серьезно, это я!"><!--К фото не прилагалось никаких лицензий, просто с вики-->
+        <p><i>Молодой Я</i></p>
     </main>
     <footer>
         <!--Тут копирайт отличного курса SF-->
