--- a/pages/about.html
+++ b/pages/about.html
@@ -3,6 +3,7 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="../css/style.css" type="text/css" media="all" />
     <title>О нас - Моя первая веб-страница</title>
 </head>
 <body>
