--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="../css/style.css" type="text/css" media="all" />
     <title>Контакты - Моя первая веб-страница</title>
 </head>
 <body>
