add language declaration

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
@@ -21,7 +21,7 @@
         <p>Я из Тулы, люблю Web и IT, спорт, ночь.</p>
         <h2>Чему я хочу научиться</h2>
         <p>Прохожу курс, что бы уметь работать с <b>PHP, JS</b>, а также <i>без подсказок</i> применять <b>JS</b></p>
-        <img src="images/Bill_Gates_1977.png" alt="Ну серьезно, это я!"><!--К фото не прилагалось никаких лицензий, просто с вики-->
+        <img src="images/Bill_Gates_1977.png" alt="Ну серьезно, это я!" title="Ну серьезно, это я!"><!--К фото не прилагалось никаких лицензий, просто с вики-->
         <p><i>Молодой Я</i></p>
     </main>
     <footer>
