--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../css/style.css" type="text/css" media="all" />
@@ -16,8 +16,8 @@
         <address>
             190000, Москва,<br>
             ул. Пушкина, д. Колотушкина<br>
-            <a href="tel:+74951000022">(495) 100-00-22<br>
-            <a href="mailto:index@nomail.io">index@nomail.io<br>
+            <a href="tel:+74951000022">(495) 100-00-22</a><br>
+            <a href="mailto:index@nomail.io">index@nomail.io</a><br>
         </address>        
     </main>
     <footer>
