--- a/pages/about.html
+++ b/pages/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ru">
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../css/style.css" type="text/css" media="all" />
